--- a/index.html
+++ b/index.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Midhun M | Portfolio</title>
-    <style>
-      body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-      h1 { color: #2c3e50; }
-      .section { margin-bottom: 30px; }
-    </style>
-  </head>
-  
-  <body>
-    <h1>Midhun M</h1>
-    <p><strong>Final Year CSE Student</strong></p>
-
-    <div class="section">
-      <h2>Projects</h2>
-      <ul>
-        <li><strong>IoT Smart Cap Assistant</strong> – Raspberry Pi project for the visually impaired</li>
-        <li><strong>Symptom-Based Medicine Recommender</strong> – React + Firebase app using Drugs.com API</li>
-        <li><strong>Real-time Weather App</strong> – Forecast app with Malayalam/Hindi and voice support</li>
-      </ul>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Midhun M | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Midhun M</h1>
+      <p>Final Year CSE Student | IoT & AI Enthusiast</p>
     </div>
+  </header>
 
-    <div class="section">
-      <h2>Skills</h2>
-      <p>Python, JavaScript, React, Firebase, C, SQL, IoT</p>
-    </div>
+  <section class="about container">
+    <h2>About Me</h2>
+    <p>I am a passionate Computer Science student with a strong interest in building real-world solutions using IoT and AI. Currently exploring innovative projects and constantly learning new technologies.</p>
+  </section>
 
-    <div class="section">
-      <h2>Contact</h2>
-      <p>Email: your.email@example.com</p>
-      <p>LinkedIn: https://linkedin.com/in/yourprofile</p>
+  <section class="projects container">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>IoT Smart Cap Assistant for Visually Impaired</h3>
+      <p>Built using Raspberry Pi and sensors for real-time obstacle detection and voice alerts.</p>
     </div>
-  </body>
+    <div class="project">
+      <h3>Symptom-Based Medicine Recommender</h3>
+      <p>React + Firebase app using Drugs.com API for health-based medicine suggestions.</p>
+    </div>
+    <div class="project">
+      <h3>Real-time Weather App</h3>
+      <p>Weather app with voice forecast, multi-language support (Malayalam/Hindi), and dark mode.</p>
+    </div>
+  </section>
+
+  <section class="skills container">
+    <h2>Skills</h2>
+    <ul>
+      <li>Python</li>
+      <li>JavaScript / React</li>
+      <li>C / C++</li>
+      <li>Firebase</li>
+      <li>Raspberry Pi / IoT</li>
+      <li>SQL / DBMS</li>
+    </ul>
+  </section>
+
+  <section class="contact container">
+    <h2>Contact</h2>
+    <p>Email: your.email@example.com</p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>GitHub: <a href="https://github.com/midhun404" target="_blank">github.com/midhun404</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Midhun M</p>
+  </footer>
+</body>
 </html>
