--- a/index.html
+++ b/index.html
@@ -5,53 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Midhun M | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <nav>
     <div class="container">
       <h1>Midhun M</h1>
       <p>Final Year CSE Student | IoT & AI Enthusiast</p>
     </div>
-  </header>
+  </nav>
 
-  <section class="about container">
-    <h2>About Me</h2>
-    <p>I am a passionate Computer Science student with a strong interest in building real-world solutions using IoT and AI. Currently exploring innovative projects and constantly learning new technologies.</p>
-  </section>
-
-  <section class="projects container">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>IoT Smart Cap Assistant for Visually Impaired</h3>
-      <p>Built using Raspberry Pi and sensors for real-time obstacle detection and voice alerts.</p>
-    </div>
-    <div class="project">
-      <h3>Symptom-Based Medicine Recommender</h3>
-      <p>React + Firebase app using Drugs.com API for health-based medicine suggestions.</p>
-    </div>
-    <div class="project">
-      <h3>Real-time Weather App</h3>
-      <p>Weather app with voice forecast, multi-language support (Malayalam/Hindi), and dark mode.</p>
+  <section class="section about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I’m a final year Computer Science student passionate about developing real-world solutions using IoT, AI, and full-stack technologies. I enjoy building innovative and impactful tech that can solve everyday problems.</p>
     </div>
   </section>
 
-  <section class="skills container">
-    <h2>Skills</h2>
-    <ul>
-      <li>Python</li>
-      <li>JavaScript / React</li>
-      <li>C / C++</li>
-      <li>Firebase</li>
-      <li>Raspberry Pi / IoT</li>
-      <li>SQL / DBMS</li>
-    </ul>
+  <section class="section projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="card">
+        <h3>IoT Smart Cap Assistant</h3>
+        <p>Raspberry Pi-based wearable for the visually impaired with ultrasonic sensors and voice alerts.</p>
+      </div>
+      <div class="card">
+        <h3>Symptom-Based Medicine Recommender</h3>
+        <p>Web app built with React + Firebase using Drugs.com API to recommend medicines based on symptoms.</p>
+      </div>
+      <div class="card">
+        <h3>Real-Time Weather App</h3>
+        <p>Weather app with multilingual (Malayalam/Hindi) UI and voice-based forecast using OpenWeatherMap API.</p>
+      </div>
+    </div>
   </section>
 
-  <section class="contact container">
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/midhun404" target="_blank">github.com/midhun404</a></p>
+  <section class="section skills">
+    <div class="container">
+      <h2>Skills</h2>
+      <ul>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Firebase</li>
+        <li>C</li>
+        <li>SQL</li>
+        <li>IoT</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="section contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Email: your.email@example.com</p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <p>GitHub: <a href="https://github.com/midhun404" target="_blank">github.com/midhun404</a></p>
+    </div>
   </section>
 
   <footer>
